--- a/NZWalksAPI/appsettings.json
+++ b/NZWalksAPI/appsettings.json
@@ -6,4 +6,7 @@
     }
   },
   "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "NZWalksConnectionStrings": "Server=localhost;Database=NZWalksDb; Trusted_Connection=True" 
+  }
 }
