--- a/NZWalksAPI/appsettings.json
+++ b/NZWalksAPI/appsettings.json
@@ -5,8 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+
+  "AllowedHosts": "*",
+
   "ConnectionStrings": {
-    "NZWalksConnectionStrings": "Server=localhost;Database=NZWalksDb; Trusted_Connection=True" 
+    "NZWalksConnectionStrings": "Server=localhost;Database=NZWalksDb;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
